; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_posix_shm.c_mac_posixshm_check_truncate.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_posix_shm.c_mac_posixshm_check_truncate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pshminfo = type { i32 }

@posixshm_check_truncate = common dso_local global i32 0, align 4
@mac_posixshm_enforce = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_posixshm_check_truncate(i32 %0, %struct.pshminfo* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.pshminfo*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.pshminfo* %1, %struct.pshminfo** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %8 = load i32, i32* @posixshm_check_truncate, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.pshminfo*, %struct.pshminfo** %5, align 8
  %11 = load %struct.pshminfo*, %struct.pshminfo** %5, align 8
  %12 = getelementptr inbounds %struct.pshminfo, %struct.pshminfo* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @MAC_CHECK(i32 %8, i32 %9, %struct.pshminfo* %10, i32 %13, i32 %14)
  %16 = load i32, i32* %7, align 4
  ret i32 %16
}

declare dso_local i32 @MAC_CHECK(i32, i32, %struct.pshminfo*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
